Update German translations in config/lang/de.ini

--- a/config/lang/de.ini
+++ b/config/lang/de.ini
@@ -44,3 +44,11 @@ quick_settings=Einstellungen
 button_open=Öffnen
 no_posts=Keine Beiträge gefunden.
 date_fmt=d.m.Y
+
+[settings]
+title=Einstellungen
+lead_language=Spracheinstellungen
+label_language=Sprache
+button_save=Speichern
+saved=Einstellungen gespeichert.
+error_unsupported=Sprache wird nicht unterstützt.
