Update English translations in config/lang/en.ini

--- a/config/lang/en.ini
+++ b/config/lang/en.ini
@@ -44,3 +44,11 @@ quick_settings=Settings
 button_open=Open
 no_posts=No posts found.
 date_fmt=m/d/Y
+
+[settings]
+title=Settings
+lead_language=Language settings
+label_language=Language
+button_save=Save
+saved=Settings saved.
+error_unsupported=Language not supported.
