Update German translations in config/lang/de.ini

--- a/config/lang/de.ini
+++ b/config/lang/de.ini
@@ -52,3 +52,12 @@ label_language=Sprache
 button_save=Speichern
 saved=Einstellungen gespeichert.
 error_unsupported=Sprache wird nicht unterstützt.
+
+[nav]
+dashboard=Dashboard
+posts=Beiträge
+comments=Kommentare
+files=Dateien
+categories=Kategorien
+settings=Einstellungen
+logout=Abmelden
