Update English language strings in config/lang/en.ini

--- a/config/lang/en.ini
+++ b/config/lang/en.ini
@@ -1,5 +1,6 @@
 [common]
 logout=Logout
+date_fmt=m/d/Y
 
 [admin_login]
 title=Login – PiperBlog Admin
@@ -43,7 +44,6 @@ quick_categories=Categories
 quick_settings=Settings
 button_open=Open
 no_posts=No posts found.
-date_fmt=m/d/Y
 
 [settings]
 title=Settings
@@ -52,3 +52,12 @@ label_language=Language
 button_save=Save
 saved=Settings saved.
 error_unsupported=Language not supported.
+
+[nav]
+dashboard=Dashboard
+posts=Posts
+comments=Comments
+files=Files
+categories=Categories
+settings=Settings
+logout=Logout
