Update config/lang/en.ini (English translations)

--- a/config/lang/en.ini
+++ b/config/lang/en.ini
@@ -52,6 +52,25 @@ label_language=Language
 button_save=Save
 saved=Settings saved.
 error_unsupported=Language not supported.
+error_write=Failed to write settings.
+tab_general=General
+tab_language=Language
+tab_theme=Theme editor
+tab_email=Email notifications
+tab_database=Database
+tab_system=System
+tab_debug=Debug & logs
+general.title=Site title
+general.description=Site description
+theme.custom_css=Custom CSS
+email.enable=Enable notifications
+email.smtp_host=SMTP host
+email.smtp_port=SMTP port
+email.smtp_user=SMTP username
+email.smtp_pass=SMTP password
+email.smtp_secure=Encryption
+email.from=From address
+database.note=Editing these settings requires caution.
 
 [nav]
 dashboard=Dashboard
