Update German translations in config/lang/de.ini

--- a/config/lang/de.ini
+++ b/config/lang/de.ini
@@ -1,5 +1,6 @@
 [common]
 logout=Abmelden
+date_fmt=d.m.Y
 
 [admin_login]
 title=Login – PiperBlog Admin
@@ -43,7 +44,6 @@ quick_categories=Kategorien
 quick_settings=Einstellungen
 button_open=Öffnen
 no_posts=Keine Beiträge gefunden.
-date_fmt=d.m.Y
 
 [settings]
 title=Einstellungen
@@ -52,6 +52,25 @@ label_language=Sprache
 button_save=Speichern
 saved=Einstellungen gespeichert.
 error_unsupported=Sprache wird nicht unterstützt.
+error_write=Speichern der Einstellungen fehlgeschlagen.
+tab_general=Allgemein
+tab_language=Sprache
+tab_theme=Theme‑Editor
+tab_email=E‑Mail‑Benachrichtigungen
+tab_database=Datenbank
+tab_system=System
+tab_debug=Debug & Logs
+general.title=Seitentitel
+general.description=Seitenbeschreibung
+theme.custom_css=Benutzerdefiniertes CSS
+email.enable=Benachrichtigungen aktivieren
+email.smtp_host=SMTP‑Server
+email.smtp_port=SMTP‑Port
+email.smtp_user=SMTP‑Benutzername
+email.smtp_pass=SMTP‑Passwort
+email.smtp_secure=Verschlüsselung
+email.from=Absenderadresse
+database.note=Änderungen hier vorsichtig vornehmen.
 
 [nav]
 dashboard=Dashboard
