Update English language strings in config/lang/en.ini

--- a/config/lang/en.ini
+++ b/config/lang/en.ini
@@ -71,6 +71,11 @@ email.smtp_pass=SMTP password
 email.smtp_secure=Encryption
 email.from=From address
 database.note=Editing these settings requires caution.
+system.soft_delete=Soft delete content (move to trash)
+system.delete_files=Delete associated files on post deletion
+system.auto_cleanup=Auto cleanup orphaned uploads
+debug.enable=Enable debug mode
+logs.enable=Enable logs
 
 [nav]
 dashboard=Dashboard
