Update German translations in config/lang/de.ini

--- a/config/lang/de.ini
+++ b/config/lang/de.ini
@@ -71,6 +71,11 @@ email.smtp_pass=SMTP‑Passwort
 email.smtp_secure=Verschlüsselung
 email.from=Absenderadresse
 database.note=Änderungen hier vorsichtig vornehmen.
+system.soft_delete=Soft Delete (In Papierkorb verschieben)
+system.delete_files=Zugehörige Dateien beim Löschen mitentfernen
+system.auto_cleanup=Verwaiste Uploads automatisch bereinigen
+debug.enable=Debug‑Modus aktivieren
+logs.enable=Logs aktivieren
 
 [nav]
 dashboard=Dashboard
