Update en.ini translations

--- a/config/lang/en.ini
+++ b/config/lang/en.ini
@@ -1,6 +1,7 @@
 [common]
 logout=Logout
 date_fmt=m/d/Y
+search=Search
 
 [admin_login]
 title=Login – PiperBlog Admin
@@ -76,6 +77,38 @@ system.delete_files=Delete associated files on post deletion
 system.auto_cleanup=Auto cleanup orphaned uploads
 debug.enable=Enable debug mode
 logs.enable=Enable logs
+
+[posts]
+title=Posts
+manage_title=Manage posts
+button_new=+ New post
+button_edit=Edit
+button_delete=Delete
+button_publish=Publish
+button_unpublish=Unpublish
+button_open=Open
+label_title=Title
+label_slug=Slug
+label_category=Category
+label_status=Status
+label_excerpt=Excerpt
+label_content=Content
+status_draft=Draft
+status_published=Published
+status_archived=Archived
+confirm_delete=Are you sure you want to delete this post?
+created=Post created.
+updated=Post updated.
+deleted=Post deleted.
+error_csrf=Invalid form token.
+error_title_required=Title is required.
+error_db=Database error.
+filter_all=All
+filter_draft=Drafts
+filter_published=Published
+filter_archived=Archived
+search_placeholder=Search title…
+no_posts=No posts found.
 
 [nav]
 dashboard=Dashboard
