Update German translations in config/lang/de.ini

--- a/config/lang/de.ini
+++ b/config/lang/de.ini
@@ -1,6 +1,7 @@
 [common]
 logout=Abmelden
 date_fmt=d.m.Y
+search=Suchen
 
 [admin_login]
 title=Login – PiperBlog Admin
@@ -76,6 +77,38 @@ system.delete_files=Zugehörige Dateien beim Löschen mitentfernen
 system.auto_cleanup=Verwaiste Uploads automatisch bereinigen
 debug.enable=Debug‑Modus aktivieren
 logs.enable=Logs aktivieren
+
+[posts]
+title=Beiträge
+manage_title=Beiträge verwalten
+button_new=+ Neuer Beitrag
+button_edit=Bearbeiten
+button_delete=Löschen
+button_publish=Veröffentlichen
+button_unpublish=Zurück als Entwurf
+button_open=Öffnen
+label_title=Titel
+label_slug=Slug
+label_category=Kategorie
+label_status=Status
+label_excerpt=Kurzbeschreibung
+label_content=Inhalt
+status_draft=Entwurf
+status_published=Veröffentlicht
+status_archived=Archiviert
+confirm_delete=Möchtest du diesen Beitrag wirklich löschen?
+created=Beitrag erstellt.
+updated=Beitrag aktualisiert.
+deleted=Beitrag gelöscht.
+error_csrf=Ungültiges Formular-Token.
+error_title_required=Titel ist erforderlich.
+error_db=Datenbankfehler.
+filter_all=Alle
+filter_draft=Entwürfe
+filter_published=Veröffentlicht
+filter_archived=Archiviert
+search_placeholder=Nach Titel suchen…
+no_posts=Keine Beiträge gefunden.
 
 [nav]
 dashboard=Dashboard
