Admin Panel optimiert, neuer Editor und 01_schema aktualisiert

--- a/config/lang/de.ini
+++ b/config/lang/de.ini
@@ -3,6 +3,7 @@ logout=Abmelden
 date_fmt=d.m.Y
 search=Suchen
 
+
 [admin_login]
 title=Login – PiperBlog Admin
 username=Benutzername
@@ -45,6 +46,22 @@ quick_categories=Kategorien
 quick_settings=Einstellungen
 button_open=Öffnen
 no_posts=Keine Beiträge gefunden.
+system_title=Systeminformationen
+system_php_ini=PHP Konfigurationsdatei (php.ini)
+system_server=Webserver
+system_os=Betriebssystem
+system_timezone=Zeitzone
+system_memory_limit=Speicherlimit (memory_limit)
+system_upload_max=Max. Upload-Größe
+system_post_max=Max. POST-Größe
+system_max_exec=Max. Ausführungszeit
+system_config_writable=Konfiguration beschreibbar
+system_disk=Speicherplatz (Frei / Gesamt)
+system_db_version=Datenbank-Version
+system_db_charset=Datenbank-Zeichensatz
+system_db_collation=Datenbank-Kollation
+system_db_sqlmode=SQL-Modus
+system_extensions=Installierte PHP-Erweiterungen
 
 [settings]
 title=Einstellungen
@@ -78,6 +95,15 @@ system.auto_cleanup=Verwaiste Uploads automatisch bereinigen
 debug.enable=Debug‑Modus aktivieren
 logs.enable=Logs aktivieren
 
+[nav]
+dashboard=Dashboard
+posts=Beiträge
+comments=Kommentare
+files=Dateien
+categories=Kategorien
+settings=Einstellungen
+logout=Abmelden
+
 [posts]
 title=Beiträge
 manage_title=Beiträge verwalten
@@ -109,12 +135,29 @@ filter_published=Veröffentlicht
 filter_archived=Archiviert
 search_placeholder=Nach Titel suchen…
 no_posts=Keine Beiträge gefunden.
+tab_markup=Editor
+tab_html=HTML
+toolbar.bold=Fett
+toolbar.italic=Kursiv
+toolbar.underline=Unterstrichen
+toolbar.link=Link einfügen
+toolbar.image=Bild einfügen
+toolbar.code=Code-Block
+toolbar.quote=Zitat
 
-[nav]
-dashboard=Dashboard
-posts=Beiträge
-comments=Kommentare
-files=Dateien
-categories=Kategorien
-settings=Einstellungen
-logout=Abmelden
+[comments]
+title=Kommentare
+manage_title=Kommentare verwalten
+status_pending=Wartend
+status_approved=Freigeschaltet
+status_spam=Spam
+label_author=Autor
+label_content=Inhalt
+label_date=Datum
+button_approve=Freigeben
+button_spam=Spam
+button_delete=Löschen
+confirm_delete=Möchtest du diesen Kommentar wirklich löschen?
+no_comments=Keine Kommentare vorhanden.
+success_saved=Dein Kommentar wurde gespeichert und wartet auf Freischaltung.
+error_required=Bitte alle Felder ausfüllen.
