--- a/config/lang/en.ini
+++ b/config/lang/en.ini
@@ -45,6 +45,22 @@ quick_categories=Categories
 quick_settings=Settings
 button_open=Open
 no_posts=No posts found.
+system_title=System Information
+system_php_ini=PHP configuration file (php.ini)
+system_server=Web server
+system_os=Operating system
+system_timezone=Timezone
+system_memory_limit=Memory limit (memory_limit)
+system_upload_max=Max. upload size
+system_post_max=Max. POST size
+system_max_exec=Max. execution time
+system_config_writable=Configuration writable
+system_disk=Disk space (Free / Total)
+system_db_version=Database version
+system_db_charset=Database charset
+system_db_collation=Database collation
+system_db_sqlmode=SQL mode
+system_extensions=Installed PHP extensions
 
 [settings]
 title=Settings
@@ -78,6 +94,15 @@ system.auto_cleanup=Auto cleanup orphaned uploads
 debug.enable=Enable debug mode
 logs.enable=Enable logs
 
+[nav]
+dashboard=Dashboard
+posts=Posts
+comments=Comments
+files=Files
+categories=Categories
+settings=Settings
+logout=Logout
+
 [posts]
 title=Posts
 manage_title=Manage posts
@@ -109,12 +134,30 @@ filter_published=Published
 filter_archived=Archived
 search_placeholder=Search title…
 no_posts=No posts found.
+search=Search
+tab_markup=Editor
+tab_html=HTML
+toolbar.bold=Bold
+toolbar.italic=Italic
+toolbar.underline=Underline
+toolbar.link=Insert link
+toolbar.image=Insert image
+toolbar.code=Code block
+toolbar.quote=Quote
 
-[nav]
-dashboard=Dashboard
-posts=Posts
-comments=Comments
-files=Files
-categories=Categories
-settings=Settings
-logout=Logout
+[comments]
+title=Comments
+manage_title=Manage comments
+status_pending=Pending
+status_approved=Approved
+status_spam=Spam
+label_author=Author
+label_content=Content
+label_date=Date
+button_approve=Approve
+button_spam=Spam
+button_delete=Delete
+confirm_delete=Are you sure you want to delete this comment?
+no_comments=No comments found.
+success_saved=Your comment has been saved and is awaiting moderation.
+error_required=Please fill in all required fields.
